# serializer version: 1
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_connection_alert-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.demo_connection_alert',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Connection alert',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Connection alert',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'connection_alert',
    'unique_id': '4213377_30105_2242_connection_alert',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_connection_alert-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Demo Connection alert',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.demo_connection_alert',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_error_code_alert-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.demo_error_code_alert',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Error code alert',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Error code alert',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'error_code_alert',
    'unique_id': '4213377_30105_2242_error_code_alert',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_error_code_alert-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Demo Error code alert',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.demo_error_code_alert',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_flow_monitor_alert-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.demo_flow_monitor_alert',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Flow monitor alert',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Flow monitor alert',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'flow_monitor_alert',
    'unique_id': '4213377_30105_2242_flow_monitor_alert',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_flow_monitor_alert-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Demo Flow monitor alert',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.demo_flow_monitor_alert',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_leak_suspected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.demo_leak_suspected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Leak suspected',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOISTURE: 'moisture'>,
    'original_icon': None,
    'original_name': 'Leak suspected',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'leak_suspected',
    'unique_id': '4213377_30105_2242_leak_suspected',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_leak_suspected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'consecutive_nights': 0,
      'device_class': 'moisture',
      'friendly_name': 'Demo Leak suspected',
      'implied_liters_per_day': None,
      'last_verdict_night': None,
      'masking_coverage': True,
      'persistent_flow': False,
      'rate_liters_per_hour': None,
      'tier': None,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.demo_leak_suspected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_online-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.demo_online',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Online',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Online',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'online',
    'unique_id': '4213377_30105_2242_online',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_online-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'Demo Online',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.demo_online',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_recharge_off-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.demo_recharge_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Recharge off',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Recharge off',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'recharge_off',
    'unique_id': '4213377_30105_2242_recharge_off',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_recharge_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Demo Recharge off',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.demo_recharge_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_regenerating-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.demo_regenerating',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Regenerating',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Regenerating',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'regenerating',
    'unique_id': '4213377_30105_2242_regenerating',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_regenerating-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Demo Regenerating',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.demo_regenerating',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_regeneration_suspended-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.demo_regeneration_suspended',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Regeneration suspended',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Regeneration suspended',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'regeneration_suspended',
    'unique_id': '4213377_30105_2242_regeneration_suspended',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_regeneration_suspended-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Demo Regeneration suspended',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.demo_regeneration_suspended',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_resin_alert-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.demo_resin_alert',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Resin alert',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Resin alert',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'resin_alert',
    'unique_id': '4213377_30105_2242_resin_alert',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_resin_alert-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Demo Resin alert',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.demo_resin_alert',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_salt_level_alert-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.demo_salt_level_alert',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Salt level alert',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Salt level alert',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'salt_level_alert',
    'unique_id': '4213377_30105_2242_salt_level_alert',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_salt_level_alert-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Demo Salt level alert',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.demo_salt_level_alert',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_usage_anomaly-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.demo_usage_anomaly',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Usage anomaly',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Usage anomaly',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'usage_anomaly',
    'unique_id': '4213377_30105_2242_usage_anomaly',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_usage_anomaly-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'actual_liters': None,
      'day': None,
      'device_class': 'problem',
      'drift_alarm': False,
      'drift_cusum': False,
      'drift_ewma': False,
      'expected_liters': None,
      'friendly_name': 'Demo Usage anomaly',
      'point_hours': 0,
      'ratio': None,
      'ratio_bucket': None,
      'reasons': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.demo_usage_anomaly',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_vacation_detected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.demo_vacation_detected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Vacation detected',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:beach',
    'original_name': 'Vacation detected',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'vacation_detected',
    'unique_id': '4213377_30105_2242_vacation_detected',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_vacation_detected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'consecutive_days': 0,
      'friendly_name': 'Demo Vacation detected',
      'icon': 'mdi:beach',
      'since': None,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.demo_vacation_detected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_vacation_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.demo_vacation_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Vacation mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Vacation mode',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'vacation_mode',
    'unique_id': '4213377_30105_2242_vacation_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_vacation_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Demo Vacation mode',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.demo_vacation_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_water_usage_alert-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.demo_water_usage_alert',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Water usage alert',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Water usage alert',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'water_usage_alert',
    'unique_id': '4213377_30105_2242_water_usage_alert',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_binary_sensors_snapshot[binary_sensor.demo_water_usage_alert-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Demo Water usage alert',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.demo_water_usage_alert',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
